--- a/HTML-CSS mundo3/Projeto_cordel/tabelas/tabelas_grandes.html
+++ b/HTML-CSS mundo3/Projeto_cordel/tabelas/tabelas_grandes.html
@@ -14,6 +14,7 @@
         table {
             border-collapse: collapse;
             width: 455px;
+            position: relative;
             
         }
 
@@ -31,8 +32,17 @@
         th {
             border: 2px solid black;
             padding: 10px;
-            background-color: darkgray;
+            background-color: rgb(87, 85, 85);
+            color: white;
         }
+
+        /* Fixando o cabeçalho */
+        thead > tr > th {
+            position: sticky; /* colado */
+            top: -1px;
+            /* caso com essas configurações não pegue, use o background-color com as mesmas cores do cabeçalho */
+        }
+
 
         td {
             border: 2px solid black;
@@ -41,8 +51,16 @@
             
         }
 
+        /* Efeito zebrado */
+        /* odd -> deixa todas as linhas impares "zebradas" 
+           even -> deixa todas as linhas pares "zebradas*/
+        tbody > tr:nth-child(odd) { 
+            background-color: lightgray;
+        }
+
         tfoot td {
-            background-color: darkgray;
+            background-color: rgb(87, 85, 85);
+            color: white;
         }
 
     </style>
