--- a/HTML-CSS mundo4/formularios/form01.html
+++ b/HTML-CSS mundo4/formularios/form01.html
@@ -9,11 +9,21 @@
 <body>
     <h1>Meu primeiro formulário.</h1>
 
-    <form action="">
+    <form action="Cadastro.php" method="post">
 
-        <p>Nome: <input type="text" name="nome" id="nome"></p>
-        <p>Sobrenome: <input type="text" name="sobrenome" id="sobrenome"></p>
-        <p><input type="submit" value="Enviar"></p>
+        <p>
+            <label for="inome">Nome:</label>
+            <input type="text" name="nome" id="inome">
+        </p>
+        
+        <p>
+            <label for="isobrenome">Sobrenome</label>
+            <input type="text" name="sobrenome" id="isobrenome">
+        </p>
+        
+        <p>
+            <input type="submit" value="Enviar">
+        </p>
     </form>
 
 
