--- a/HTML-CSS mundo4/formularios/form01.html
+++ b/HTML-CSS mundo4/formularios/form01.html
@@ -13,12 +13,12 @@
 
         <p>
             <label for="inome">Nome:</label>
-            <input type="text" name="nome" id="inome">
+            <input type="text" name="nome" id="inome" required>
         </p>
         
         <p>
             <label for="isobrenome">Sobrenome</label>
-            <input type="text" name="sobrenome" id="isobrenome">
+            <input type="text" name="sobrenome" id="isobrenome" required>
         </p>
         
         <p>
