--- a/HTML-CSS mundo4/MF/index.html
+++ b/HTML-CSS mundo4/MF/index.html
@@ -5,16 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mobile Firts</title>
+    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/media-query.css">
     
 </head>
 <body>
     <main>
         <h1>Testando Media Queries</h1>
-        <img src="img/icon-phone.png" alt="Acessando via smartphone">
-        <img src="img/icon-tablet.png" alt="Acessando via tablet">
-        <img src="img/icon-print.png" alt="Versão para impressão">
-        <img src="img/icon-pc.png" alt="Versão para desktop">
-        <img src="img/icon-tv.png" alt="Versão para TV">
+        <img id="phone"src="img/icon-phone.png" alt="Acessando via smartphone">
+
+        <img id="tablet"src="img/icon-tablet.png" alt="Acessando via tablet">
+
+        <img id="print"src="img/icon-print.png" alt="Versão para impressão">
+
+        <img id="pc"src="img/icon-pc.png" alt="Versão para desktop">
+       
+        <img id="tv"src="img/icon-tv.png" alt="Versão para TV">
     </main>
 </body>
 </html>
